--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,70 @@
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: sans-serif;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+body {
+    font-size: 20px;
+}
+.main__container .card img {
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+    background-size: cover;
+}
+header {
+    background-color: aqua;
+    padding: 30px 0px;
+    transition: all 2s;
 }
 
-body{
-font-size: 20px;
+header:hover{
+background-color:rgb(238, 255, 0);
 }
-
-img{
-width: 352px;
-height: 332px;
+.container {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
 }
-
-
-header{
-background-color: aqua;
-padding: 30px 0px;
+.header__container {
+    display: flex;
+     align-items: center;
+     justify-content: space-between;
 }
-
-.header_container{
-display: flex;
-align-items: center;
-justify-content: space-between;
+header a {
+    text-decoration: none;
+    color: black;
+    width: 50px;
+    height: 40px;
 }
-
-
-.container{
-max-width: 1200px;
-width: 100%;
-margin: 0 auto;
+header ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 30px;
 }
+header ul a:hover {
 
-  header a{
-text-decoration: none;
-color: black;
+    border: 1px solid rgb(26, 24, 24);
+    color: rgb(10, 246, 128);
+    border-radius: 10px;
+    border-color: rgb(1, 1, 1);
 }
+.main__container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 30px;
+    margin-top: 50px;
+}
+.card {
+    width: 30%;
+    padding: 25px;
+    text-align: center;
+    box-shadow: 0px 3px 10px 20px rgba(34, 60, 80, 0.26);
 
-header ul{
-list-style: none;
-display: flex;
-align-items:center;
-gap: 30px;
+    border-radius: 10px;
 }
